--- a/style4.css
+++ b/style4.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   background-size: cover;
-  background-image: url(26.jpg);
+  background-image: url(https://images5.alphacoders.com/439/thumb-1920-439361.jpg);
   background-repeat: no-repeat;
   width: 100%;
   height: 900px;
@@ -33,6 +33,14 @@ header {
   margin-right: 510px
 }
 
+p{
+text-align: justify;
+font-family: serif;
+}
+
+h2{
+  text-align: center;
+}
 
 .drop {
     float: right;
@@ -78,8 +86,8 @@ header {
 }
 
 .badan {
-	margin-top: 15px;
-	opacity: .9;
+	margin-top: 50px;
+	opacity: .8;
 }
 
 .badan .sidebar ul {
@@ -113,7 +121,7 @@ header {
 }
 
 .badan .sidebar ul li a:hover {
-	color: #b2ae63;
+	color: grey;
 }
 .badan .content {
 	float: left;
@@ -126,6 +134,18 @@ header {
 	position: absolute;
 }
 
+.badan .contentt {
+	background: white;
+	width: 300px;
+	margin-left: 559px;
+	padding: 20px;
+	font-family: calibri;
+	margin-top: 50px;
+	position: absolute;
+}
+.badan a{
+  color: black
+}
 .center {
 	display: block;
 	margin-right: auto;
